# flashtalk

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  test.html
deploy/systemd/: flashtalk-api.service
src/flashtalk_api/: app.py
src/flashtalk_api/api/: routes.py
src/flashtalk_api/core/: config.py  logging.py
src/flashtalk_api/domain/: errors.py  protocols.py  text_utils.py  use_cases.py
src/flashtalk_api/infrastructure/: elevenlabs_speech_service.py  local_audio_store_service.py
tests/: conftest.py
tests/api/: test_say_endpoint.py
tests/unit/: test_elevenlabs_speech_service.py  test_local_audio_store_service.py  test_text_utils.py  test_use_cases.py
